site/docs/v0.2.0/en/components/alert.mdx
# Alert

<Preview class="w-full max-w-md">
<div class="grid items-start gap-4">
  <div class="alert"><svg class="lucide lucide-circle-check" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="m9 12 2 2 4-4" /></svg>
    <h2>Payment successful</h2>
    <section>Your payment of $29.99 has been processed. A receipt has been sent to your email address.</section>
  </div>
  <div class="alert"><svg class="lucide lucide-info" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="M12 16v-4" /><path d="M12 8h.01" /></svg>
    <h2>New feature available</h2>
    <section>We've added dark mode support. You can enable it in your account settings.</section>
  </div>
</div>
</Preview>

## Usage

<Steps>
  <Step title="Include CSS">

Import Tailwind and one full A3S UI style bundle.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

Or import only the base CSS, Alert component CSS, and one style pack.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/alert.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

Using CDN or bundler imports? See the [Installation page](/installation).

  </Step>
  <Step title="Add your alert HTML">

Use `alert` for default styling. Add `data-variant="destructive"` for error states. Add a direct child `<footer>` for an inline-end action region.

```html
<div class="alert"><svg class="lucide lucide-info" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="M12 16v-4" /><path d="M12 8h.01" /></svg>
  <h2>Heads up!</h2>
  <section>You can add components and dependencies to your app.</section>
  <footer>
    <button type="button" class="btn" data-variant="outline">Enable</button>
  </footer>
</div>
```

  </Step>
</Steps>

### HTML structure

<dl>
  <dt><code>&lt;div class="alert"&gt;</code></dt>
  <dd>
    Main container. Use <code>data-variant="destructive"</code> for error states.
    <dl>
      <dt><code>&lt;svg&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
      <dd>The icon.</dd>
      <dt><code>&lt;h2&gt;</code></dt>
      <dd>The title.</dd>
      <dt><code>&lt;section&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
      <dd>The description.</dd>
      <dt><code>&lt;footer&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
      <dd>The action region, aligned to the inline end of the alert. Put the action element inside it, such as a button or link.</dd>
    </dl>
  </dd>
</dl>

## Examples

### Basic

A basic alert with an icon, title and description.

<Preview class="w-full max-w-md">
<div class="alert"><svg class="lucide lucide-circle-check" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="m9 12 2 2 4-4" /></svg>
  <h2>Account updated successfully</h2>
  <section>Your profile information has been saved. Changes will be reflected immediately.</section>
</div>
</Preview>

### Destructive

Use `data-variant="destructive"` to create a destructive alert.

<Preview class="w-full max-w-md">
<div class="alert" data-variant="destructive"><svg class="lucide lucide-circle-alert" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><line x1="12" x2="12" y1="8" y2="12" /><line x1="12" x2="12.01" y1="16" y2="16" /></svg>
  <h2>Payment failed</h2>
  <section>Your payment could not be processed. Please check your payment method and try again.</section>
</div>
</Preview>

### Action

Use `<footer>` to add a button or other action element to the alert.

<Preview class="w-full max-w-md">
<div class="alert">
  <h2>Dark mode is now available</h2>
  <section>Enable it under your profile settings to get started.</section>
  <footer>
    <button type="button" class="btn" data-size="xs">Enable</button>
  </footer>
</div>
</Preview>

### Custom colors

You can customize the alert colors by adding custom classes such as `bg-amber-50 dark:bg-amber-950` to the alert.

<Preview class="w-full max-w-md">
<div class="alert border-amber-200 bg-amber-50 text-amber-900 dark:border-amber-900 dark:bg-amber-950 dark:text-amber-50"><svg class="lucide lucide-triangle-alert" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3" /><path d="M12 9v4" /><path d="M12 17h.01" /></svg>
  <h2>Your subscription will expire in 3 days.</h2>
  <section>Renew now to avoid service interruption or upgrade to a paid plan to continue using the service.</section>
</div>
</Preview>

### RTL

Add `dir="rtl"` to the alert or an ancestor.

<Preview class="w-full max-w-md">
<div class="grid items-start gap-4" dir="rtl">
  <div class="alert"><svg class="lucide lucide-circle-check" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="m9 12 2 2 4-4" /></svg>
    <h2>تم الدفع بنجاح</h2>
    <section>تمت معالجة دفعتك البالغة 29.99 دولارًا. تم إرسال إيصال إلى عنوان بريدك الإلكتروني.</section>
  </div>
  <div class="alert"><svg class="lucide lucide-info" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="M12 16v-4" /><path d="M12 8h.01" /></svg>
    <h2>ميزة جديدة متاحة</h2>
    <section>لقد أضفنا دعم الوضع الداكن. يمكنك تفعيله في إعدادات حسابك.</section>
  </div>
</div>
</Preview>

## React

```tsx
export function AlertExample() {
  return (
    <div className="alert">
      <svg
        className="lucide lucide-info"
        xmlns="http://www.w3.org/2000/svg"
        width="24"
        height="24"
        viewBox="0 0 24 24"
        fill="none"
        stroke="currentColor"
        strokeWidth="2"
        strokeLinecap="round"
        strokeLinejoin="round"
      >
        <circle cx="12" cy="12" r="10"></circle>
        <path d="M12 16v-4"></path>
        <path d="M12 8h.01"></path>
      </svg>
      <h2>Heads up!</h2>
      <section>You can add components and dependencies to your app.</section>
      <footer>
        <button type="button" className="btn" data-variant="outline">
          Enable
        </button>
      </footer>
    </div>
  );
}
```

This published version predates framework adapters. The example renders the same semantic DOM and lets that version's browser runtime enhance its interactions.

## Vue

```vue
<template>
  <div class="alert">
    <svg
      class="lucide lucide-info"
      xmlns="http://www.w3.org/2000/svg"
      width="24"
      height="24"
      viewBox="0 0 24 24"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      stroke-linecap="round"
      stroke-linejoin="round"
    >
      <circle cx="12" cy="12" r="10"></circle>
      <path d="M12 16v-4"></path>
      <path d="M12 8h.01"></path>
    </svg>
    <h2>Heads up!</h2>
    <section>You can add components and dependencies to your app.</section>
    <footer>
      <button type="button" class="btn" data-variant="outline">Enable</button>
    </footer>
  </div>
</template>
```

This published version predates framework adapters. The example renders the same semantic DOM and lets that version's browser runtime enhance its interactions.
